--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,16 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Fukurama-Class
-version:      0.025
-version_from: lib/Fukurama/Class.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Fukurama-Class
+version:             0.027
+abstract:            Pragma to extend the Perl-OO (in native Perl)
+license:             ~
+author:              
+    - Tobias Tacke <cpan@tobias-tacke.de>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
+    Carp:                          0
+    Data::Dumper:                  0
     Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
